# sentinel_iv

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SBOM.md  baseline_policy.dev.yaml  baseline_policy.yaml  docker-compose.yml  metric_registry.yaml  production_checklist.md  redaction_policy.yaml  retention_policy.yaml  run_contract.md  runs.db  runs_encrypted.db  runs_encrypted.db.bak.20260116114118  sentinel
Questions/: q_and_a.md  teen_overview.md
app/: __init__.py
artifact_out/: metrics.csv  parser_profile.json  run_meta.json  template_stats.json
artifacts/: baseline_approvals.txt  baseline_requests.txt  checksums.txt  hb-hybrid-kit-v0.3.0.zip.sha256  heartbeat.jsonl  licenses.json
asserts/: example_asserts.yaml
config/: actions_policy.yaml  baseline_quality_policy.yaml  daemon.yaml  equivalence_mapping.yaml  readiness_gates.yaml  retention.yaml  runtime.yaml  telemetry_schema.yaml  time.yaml
configs/: cmapss_fd001_thresholds.yaml  cmapss_fd003_thresholds.yaml  cmapss_fd003_thresholds.yaml.bak.20260116230523  cmapss_fd003_thresholds.yaml.bak.20260116231355  cmapss_fd003_thresholds.yaml.bak.20260116232012  guardrails.yaml  perf_limits.yaml  rollout_gates.yaml
demo_output/: demo.db
deploy/: hb-daemon.service  install.sh
docs/: ACCEPTANCE_TEST_PLAN.md  ACTION_TIERS.md  ADMIN_GUIDE.md  ARTIFACT_SCHEMA.md  BREAK_GLASS_OVERRIDE.md  COMMERCIAL_RELEASE_CHECKLIST.md  COMPLIANCE_MATRIX.md  CONTAINER_SIGNING.md  CUSTODY_AND_AUDIT.md  DECISION_AUTHORITY.md  (+61 more)
sdk/: CMakeLists.txt  Makefile  README.md  hb_event.c  hb_event.h  hb_event_client.py
(+574 files in other folders)
